syntax = "proto2";

package test2;

message DefaultValues {
  optional double double = 1 [default = 1.1];
  optional float float = 2 [default = 2.2];
  optional int32 int32 = 3 [default = -3];
  optional int64 int64 = 4 [default = 4];
  optional uint32 uint32 = 5 [default = 5];
  optional uint64 uint64 = 6 [default = 6];
  optional sint32 sint32 = 7 [default = -7];
  optional sint64 sint64 = 8 [default = 8];
  optional fixed32 fixed32 = 9 [default = 9];
  optional fixed64 fixed64 = 10 [default = 10];
  optional sfixed32 sfixed32 = 11 [default = -11];
  optional sfixed64 sfixed64 = 12 [default = 12];
  optional bool bool = 13 [default = true];
  optional string string = 14 [default = "hello"];
  optional bytes bytes = 15 [default = "\0\x01\x07\x08\x0C\n\r\t\x0B\\\'\"\xFE"];
  optional Proto2Enum defaulted_enum = 16 [default = OTHER];
  optional Proto2Enum enum = 17;
}

message UnpackedScalarArray {
  repeated double unpacked_double = 42;
}

enum Proto2Enum {
  DEFAULT = 2;
  OTHER = 3;
}

message ContainsGroup {
  optional group RequiredGroup = 1 {
    required string a = 1;
    optional int32 b = 2;
  }
  optional group OptionalGroup = 2 {
    required string c = 1;
    optional int32 d = 2;
  }
  repeated group RepeatedGroup = 3 {
    required string e = 1;
    optional int32 f = 2;
  }
}
